Add file upload and download features.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -317,6 +317,10 @@
 	<string name="console_menu_resize">"Force Size"</string>
 	<!-- Button that brings up the list of URLs on the current screen -->
 	<string name="console_menu_urlscan">"URL Scan"</string>
+	<!-- Button that lets user pick the file to download -->
+	<string name="console_menu_download">"Download File"</string>
+	<!-- Button that lets user pick the file to upload -->
+	<string name="console_menu_upload">"Upload File"</string>
 
 	<!-- Button label to answer "Yes" to a yes/no prompt -->
 	<string name="button_yes">"Yes"</string>
@@ -432,6 +436,16 @@
 
 	<string name="terminal_no_session">"Session will not be started due to host preference."</string>
 	<string name="terminal_enable_portfoward">"Enable port forward: %1$s"</string>
+
+	<string name="transfer_downloading">"Downloading files..."</string>
+	<string name="transfer_downloading_file">"Downloading file %1$s..."</string>
+	<string name="transfer_downloads_failed">"Error downloading files:%1$s"</string>
+	<string name="transfer_pick_remote">"Select remote file"</string>
+	<string name="transfer_pick_remote_desc">"Enter the paths of the remote files to download (one per line; no wildcard expansion)"</string>
+	<string name="transfer_remote_action">"Download"</string>
+	<string name="transfer_uploading">"Uploading file..."</string>
+	<string name="transfer_uploading_file">"Uploading file %1$s..."</string>
+	<string name="transfer_uploads_failed">"Error uploading files:%1$s"</string>
 
 	<string name="local_shell_unavailable">"Failure! Local shell is unavailable on this phone."</string>
 
