--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -2,6 +2,10 @@
 <resources>
   <string name="app_desc">Einfacher, mächtiger, open-source SSH client.</string>
   <string name="service_desc">Hält SSH-Verbindungen und geladene öffentliche Schlüssel aufrecht</string>
+  <string name="auth_agent_service_desc">Handelt als SSH-Agent für andere Anwendungen am Gerät</string>
+  <string name="ssh_agent_permission_label">Im SSH-Agent gespeicherte Schlüssel verwenden</string>
+  <string name="ssh_agent_permission_desc">Erlaubt der Anwendung SSH-Transaktionen zu authentifizieren mit Ihren im ConnectBot gespeicherten Privatschlüsseln.
+  		SEHR GEFÄHRLICH - kann von böswilligen Anwendungen mißbraucht werden.</string>
   <string name="title_hosts_list">Hosts</string>
   <string name="title_pubkey_list">Öffentliche Schlüssel</string>
   <string name="title_port_forwards_list">Port-Weiterleitungen</string>
@@ -65,6 +69,7 @@
   <string name="button_change">Ändern</string>
   <string name="button_generate">Schlüssel erzeugen</string>
   <string name="button_resize">Größe ändern</string>
+  <string name="button_resize_reset">Standardgröße</string>
   <string name="alert_disconnect_msg">Die Verbindung wurde getrennt.</string>
   <string name="msg_copyright">Copyright © 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminalemulation</string>
@@ -140,6 +145,7 @@
   <string name="console_menu_portforwards">Port-Weiterleitungen</string>
   <string name="console_menu_resize">Größe erzwingen</string>
   <string name="console_menu_urlscan">URL Scan</string>
+  <string name="console_menu_screencapture">Bildschirmfoto</string>
   <string name="button_yes">Ja</string>
   <string name="button_no">Nein</string>
   <string name="portforward_local">Lokal</string>
@@ -209,9 +215,31 @@
   <string name="yes">Ja</string>
   <string name="exceptions_submit_message">Scheinbar hatte ConnectBot Probleme bei der letzten Benutzung. Fehlermeldung an die ConnectBot übermitteln?</string>
   <string name="menu_colors_reset">Zurücksetzen</string>
-  <string name="app_is_running">ConnectBot läuft</string>
+  <string name="app_is_running">VX ConnectBot läuft</string>
   <string name="color_red">rot</string>
   <string name="color_green">grün</string>
   <string name="color_blue">blau</string>
   <string name="color_gray">grau</string>
+  <string name="button_close">Schließen</string>
+  <string name="pref_xperiapro_title">Sony Ericsson Xperia (mini) pro Tastaturmapping</string>
+  <string name="pref_xperiapro_summary">Tasten der Xperia (mini) pro Hardwaretastatur umleiten</string>
+  <string name="pref_default_size_category">Voreinstellungen für Fenstergröße</string>
+  <string name="pref_default_font_size">Standard-Schriftgröße</string>
+  <string name="pref_default_font_size_summary">Standardgröße der Schrift (0 = Automatisch)</string>
+  <string name="pref_default_fsize_width">Standard-Breite (Größe erzwingen)</string>
+  <string name="pref_default_fsize_width_summary">Voreingestellte Bildschirmbreite in Spalten für Größe erzwingen</string>
+  <string name="pref_default_fsize_height">Standard-Höhe (Größe erzwingen)</string>
+  <string name="pref_default_fsize_height_summary">Voreingestellte Bildschirmhöhe in Zeilen für Größe erzwingen</string>
+  <string name="resize_error_title">Fehler bei Änderung der Bildschirmgröße</string>
+  <string name="resize_error_width_height">Länge und Breite müssen größer als 0 sein</string>
+  <string name="pref_screen_capture_category">Screenshot</string>
+  <string name="pref_screen_capture_folder">Pfad für Screenshots</string>
+  <string name="pref_screen_capture_folder_summary">Ordner für das Speichern von Screenshots</string>
+  <string name="pref_screen_capture_popup">Benachrichtigung beim Screenshot</string>
+  <string name="pref_screen_capture_popup_summary">Ein Pop-Up-Fenster nach Erstellung eines Screenshots anzeigen</string>
+  <string name="screen_capture">Screenshot</string>
+  <string name="screenshot_success_title">Screenshot erfolgreich</string>
+  <string name="screenshot_saved_as">Screenshot wurde gespeichert als</string>
+  <string name="screenshot_error_title">Fehler beim Screenshot</string>
+  <string name="screenshot_not_saved_as">Screenshot konnte nicht gespeichert werden als</string>
 </resources>
