--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -505,4 +505,8 @@
 	<string name="screenshot_saved_as">Screenshot saved as</string>
 	<string name="screenshot_error_title">Error creating screenshot</string>
 	<string name="screenshot_not_saved_as">Could not save screenshot as</string>
+
+	<!--  Character picker (SYM) dialog  -->
+	<string name="pref_picker_string">SYM window contents</string>
+	<string name="pref_picker_string_summary">String of characters for the character picker dialog</string>
 </resources>
