--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -550,15 +550,21 @@
 	<color name="gray">#ffff0000</color>
 
 	<!-- File Transfer -->
-	<string name="transfer_downloading">"Downloading files..."</string>
-	<string name="transfer_downloading_file">"Downloading file %1$s..."</string>
-	<string name="transfer_downloads_failed">"Error downloading files:%1$s"</string>
-	<string name="transfer_pick_remote">"Select remote file"</string>
-	<string name="transfer_pick_remote_desc">"Enter the paths of the remote files to download (one per line; no wildcard expansion)"</string>
-	<string name="transfer_remote_action">"Download"</string>
-	<string name="transfer_uploading">"Uploading file..."</string>
-	<string name="transfer_uploading_file">"Uploading file %1$s..."</string>
-	<string name="transfer_uploads_failed">"Error uploading files:%1$s"</string>
 	<string name="pref_download_folder">Download folder</string>
 	<string name="pref_download_folder_summary">Path to save downloaded files</string>
+	<string name="pref_background_file_transfer">Background file transfer</string>
+	<string name="pref_background_file_transfer_summary">Perform file downloads and uploads in background</string>	
+	<string name="transfer_downloading">Downloading files...</string>
+	<string name="transfer_downloading_file">Downloading file %1$s</string>
+	<string name="transfer_download_complete">Download complete: %1$s</string>
+	<string name="transfer_download_failed">Error downloading file: %1$s</string>
+	<string name="transfer_downloads_failed">Error downloading files:%1$s</string>
+	<string name="transfer_pick_remote">Select remote file"</string>
+	<string name="transfer_pick_remote_desc">Enter paths of the remote files to download (one per line)</string>
+	<string name="transfer_remote_action">Download</string>
+	<string name="transfer_uploading">Uploading file...</string>
+	<string name="transfer_uploading_file">Uploading file %1$s</string>
+	<string name="transfer_upload_complete">Upload complete: %1$s</string>
+	<string name="transfer_upload_failed">Error uploading file: %1$s</string>
+	<string name="transfer_uploads_failed">Error uploading files:%1$s</string>
 </resources>
