Fix app string, update German and Slovak translation.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -146,6 +146,8 @@
   <string name="console_menu_resize">Größe erzwingen</string>
   <string name="console_menu_urlscan">URL Scan</string>
   <string name="console_menu_screencapture">Bildschirmfoto</string>
+  <string name="console_menu_download">"Datei herunterladen"</string>
+  <string name="console_menu_upload">"Datei hochladen"</string>
   <string name="button_yes">Ja</string>
   <string name="button_no">Nein</string>
   <string name="portforward_local">Lokal</string>
@@ -244,5 +246,35 @@
   <string name="screenshot_error_title">Fehler beim Screenshot</string>
   <string name="screenshot_not_saved_as">Screenshot konnte nicht gespeichert werden als</string>
   <string name="pref_picker_string">Inhalt des SYM-Dialogfensters</string>
-  <string name="pref_picker_string_summary">Zeichenkette für das Zeichenwahl-Dialogfenster</string>  
+  <string name="pref_picker_string_summary">Zeichenkette für das Zeichenwahl-Dialogfenster</string>
+  <string name="pref_file_transfer_category">Übertragung von Dateien</string>
+  <string name="pref_file_dialog_title">Dateiauswahl</string>
+  <string name="pref_file_dialog_summary">Formular zur Auswahl von Dateien und Verzeichnissen</string>
+  <string name="pref_file_dialog_builtin">eingebaut</string>
+  <string name="error_starting_app">Fehler beim Ausführen von %1$s</string>
+  <string name="location">Position</string>
+  <string name="cant_read_folder">Fehler beim lesen des Verzeichnisses.</string>
+  <string name="nnew">Neu</string>
+  <string name="select">Auswählen</string>
+  <string name="file_name">Dateiname:</string>
+  <string name="cancel">Abbrechen</string>
+  <string name="create">Speichern</string>
+  <string name="no_data">Keine Daten</string>
+  <string name="pref_download_folder">Download-Verzeichnis</string>
+  <string name="pref_download_folder_summary">Pfad zum Speichern von heruntergeladenen Dateien</string>
+  <string name="pref_background_file_transfer">Hintergrundübertragung von Dateien</string>
+  <string name="pref_background_file_transfer_summary">Das Herunterladen und Hochladen von Dateien im Hintergrund ausführen.</string>	
+  <string name="transfer_downloading">Herunterladen von Dateien...</string>
+  <string name="transfer_downloading_file">Lade heruter: %1$s</string>
+  <string name="transfer_download_complete">Herunterladen abgeschlossen: %1$s</string>
+  <string name="transfer_download_failed">Fehler beim Herunterladen: %1$s</string>
+  <string name="transfer_downloads_failed">Fehler beim Herunterladen:%1$s</string>
+  <string name="transfer_pick_remote">Entfernte Datei auswählen</string>
+  <string name="transfer_pick_remote_desc">Pfade der herunterzuladenden entfernten Dateien (eine pro Zeile)</string>
+  <string name="transfer_remote_action">Herunterladen</string>
+  <string name="transfer_uploading">Hochladen von Dateien...</string>
+  <string name="transfer_uploading_file">Lade hoch: %1$s</string>
+  <string name="transfer_upload_complete">Hochladen abgeschlossen: %1$s</string>
+  <string name="transfer_upload_failed">Fehler beim Hochladen: %1$s</string>
+  <string name="transfer_uploads_failed">Fehler beim Hochladen:%1$s</string>
 </resources>
