--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -146,6 +146,8 @@
   <string name="console_menu_resize">Vynútiť veľkosť</string>
   <string name="console_menu_urlscan">Nájsť URL</string>
   <string name="console_menu_screencapture">Snímka obrazovky</string>
+  <string name="console_menu_download">"Prevziať súbor"</string>
+  <string name="console_menu_upload">"Odoslať súbor"</string>
   <string name="button_yes">Áno</string>
   <string name="button_no">Nie</string>
   <string name="portforward_local">Lokálny</string>
@@ -245,4 +247,34 @@
   <string name="screenshot_not_saved_as">Snímka obrazovky nemohla byť uložená do</string>
   <string name="pref_picker_string">Obsah dialógového okna SYM</string>
   <string name="pref_picker_string_summary">Sada znakov do dialógového okna na výber znaku</string>
+  <string name="pref_file_transfer_category">Prenos súborov]</string>
+  <string name="pref_file_dialog_title">Výber súbora</string>
+  <string name="pref_file_dialog_summary">Formulár na výber súborov a priečinkov</string>
+  <string name="pref_file_dialog_builtin">zabudovaný</string>
+  <string name="error_starting_app">Nepodarilo sa spustiť %1$s</string>
+  <string name="location">Umiestnenie</string>
+  <string name="cant_read_folder">Chyba pri čítaní priečinka.</string>
+  <string name="nnew">Nové</string>
+  <string name="select">Vybrať</string>
+  <string name="file_name">Názov súbora:</string>
+  <string name="cancel">Zrušiť</string>
+  <string name="create">Uložiť</string>
+  <string name="no_data">Žiadne dáta</string>
+  <string name="pref_download_folder">Priečinok pre preberanie</string>
+  <string name="pref_download_folder_summary">Cesta pre ukladanie prevzatých súborov</string>
+  <string name="pref_background_file_transfer">Prenos súborov na pozadí</string>
+  <string name="pref_background_file_transfer_summary">Odosielanie a preberanie súborov uskutočniť na pozadí.</string>	
+  <string name="transfer_downloading">Preberanie súborov...</string>
+  <string name="transfer_downloading_file">Preberanie súbora: %1$s</string>
+  <string name="transfer_download_complete">Preberanie ukončené: %1$s</string>
+  <string name="transfer_download_failed">Chyba pri preberaní: %1$s</string>
+  <string name="transfer_downloads_failed">Chyby pri preberaní:%1$s</string>
+  <string name="transfer_pick_remote">Vybrať vzdialený súbor</string>
+  <string name="transfer_pick_remote_desc">Cesty k vzdialeným súborom na prevzatie (na každom riadku jeden)</string>
+  <string name="transfer_remote_action">Prevziať</string>
+  <string name="transfer_uploading">Odosielanie súborov...</string>
+  <string name="transfer_uploading_file">Odosielanie súbora: %1$s</string>
+  <string name="transfer_upload_complete">Odosielanie ukončené: %1$s</string>
+  <string name="transfer_upload_failed">Chyba pri odosielaní: %1$s</string>
+  <string name="transfer_uploads_failed">Chyby pri odosielaní:%1$s</string>
 </resources>
